devel
-----

* FE-636: bump rollup from 2.79.1 to 2.79.2.

* Replace arangodb.com with arango.ai in URLs.


3.12.7 (2025-12-06)
-------------------

* Updated ArangoDB Starter to v0.19.15.

* Rebuilt included rclone v1.65.2 with go1.24.11 and non-vulnerable
  dependencies.

* FE-636: bump express from 4.18.2 to 4.21.2 (latest 4.X version) (ensure
  non-vulnerable body-parser).

* Fix a potential integer overflow in shortest path estimation.

* Fix BTS-2268: Fixed an issue where query plan for queries with subquery is
  causing a crash when being stored in query plan cache. The issue is a missing
  invalidateCost from the splice-subqueries rule.

* FE-905: Update tooltip text for maxSkewThreshold  & minDeletionRatio. 

* COR-45: Added support for index hints in vector search queries.

* COR-13: New ArangoSearch consolidation policy
  - new algorithm that uses maxSkewThreshold and minDeletionRatio
  - Bumped ArangoSearch

* The query explainer now displays the vector index used by
  EnumerateNearVectorNode.

* FE-636: bump webpack-dev-middleware from 5.3.3 to 5.3.4.

* FE-636: bump braces from 3.0.2 to 3.0.3.

* COR-8: Added new metrics to track deployment metadata:
  - `arangodb_metadata_number_of_databases`: Total number of databases
  - `arangodb_metadata_number_of_collections`: Total number of collections
  - `arangodb_metadata_number_of_shards`: Total number of shards (cluster only)
  These metrics are exposed on coordinators (in cluster mode) and single
  servers, providing visibility into the overall size and scale of the
  deployment.

* Enforce that a license with a baked in deployment ID can only be applied to a
  deployment with that ID.

* Export the license grant in `GET /_admin/license` in clear JSON but without
  signature in the `grant` attribute.

* COR-5: Added resource metrics effective CPU cores, effective physical memory,
  and cgroup version detection.

* Add `storedValues` support for vector indexes. This allows storing additional